--- a/app/client/views/dashboard/dashboard.html
+++ b/app/client/views/dashboard/dashboard.html
@@ -8,7 +8,7 @@
       Hey there! Welcome to the application portal for HackBeanpot 2020. HackBeanpot is an annual student-run hackathon for anyone interested in hacking together a cool project, eating midnight snacks, and connecting with Boston’s tech scene. Don’t worry if you don’t have much CS experience; we welcome students of all backgrounds! HackBeanpot 2020 will be hosted from February 7-9, 2020 at Catalant Technologies.
     </p>
     <p>
-      If you are interested in attending, please complete this form by Friday, January 10, 2020. Feel free to visit our website for more information: <a href="https://hackbeanpot.com" class="inline-link" title="Our website!">https://hackbeanpot.com</a>.
+      If you are interested in attending, please complete this form by Friday, January 10, 2020. Feel free to visit our website for more information: <a href="https://hackbeanpot.com" target="_blank" class="inline-link" title="Our website!">https://hackbeanpot.com</a>.
     </p>
     <p> After you submit your application, if you're planning on attending with a team, please register it on our Team page on the left. Don't have a team? Don't worry! At the event, we'll be having a team formation event where you'll meet fellow attendees and create a team on the day of. </p>
   </div>
