--- a/app/client/views/admin/user/user.html
+++ b/app/client/views/admin/user/user.html
@@ -268,7 +268,7 @@
       </div>
 
       <div class="field">
-        <label>Minor</label>
+        <label>Minor(s), if any</label>
         <input type="text" ng-model="selectedUser.profile.minor">
       </div>
 
