--- a/app/client/views/admin/user/user.html
+++ b/app/client/views/admin/user/user.html
@@ -161,15 +161,15 @@
                 ng-model="selectedUser.profile.jellybean">
       </div>
 
-      <div class="field">
-        <label>What is your experience with Hackathons? </label>
-        <select
-          name="hackerExperience"
-          ng-model="selectedUser.profile.hackerExperience">
-          <option value="First time at a hackathon?">First time at a hackathon?</option>
-          <option value="First time at HackBeanpot?">First time at HackBeanpot?</option>
-          <option value="I would be interested in a first time hacker orientation">I would be interested in a first time hacker orientation</option>
-        </select>
+      <div class="checkbox-label"> What is your experience with Hackathons? </div>
+      <div class="field"
+        ng-repeat="(key, value) in hackerExperience">
+
+        <div class="ui checkbox">
+          <input type="checkbox" ng-model="hackerExperience[key]" />
+          <label>{{key}}</label>
+        </div>
+
       </div>
 
       <div class="field">
@@ -205,6 +205,22 @@
       </div>
 
       <div class="field">
+        <label> S.W.A.G. - Shirts We All Got. Shirt size? </label>
+        <select
+          name="shirt"
+          ng-model="selectedUser.profile.shirtSize"
+          required>
+          <option value=""></option>
+          <option value="XS">Unisex X-Small</option>
+          <option value="S">Unisex Small</option>
+          <option value="M">Unisex Medium</option>
+          <option value="L">Unisex Large</option>
+          <option value="XL">Unisex X-Large</option>
+          <option value="XXL">Unisex XX-Large</option>
+        </select>
+      </div>
+
+      <div class="field">
         <label>
           Our theme is “Sprout” this year, which represents growth in new skills, relationships, and experiences. With this in mind, what are you hoping to get out of HackBeanpot? What do you want to walk away having learned or experienced?
         </label>
@@ -216,7 +232,7 @@
         <label> Are you planning on coming with a team? </label>
         <select
           name="teamPlan"
-          ng-model="user.profile.teamPlan">
+          ng-model="selectedUser.profile.teamPlan">
           <option value="I have a team that I plan to come and work with">I have a team that I plan to come and work with.</option>
           <option value="I have a team in mind but would be open to finding a new team at the event">I have a team in mind but would be open to finding a new team at the event.</option>
           <option value="I want to join a new team at the event">I want to join a new team at the event</option>
