--- a/app/client/views/admin/users/users.html
+++ b/app/client/views/admin/users/users.html
@@ -70,8 +70,12 @@
                 <i class="green circle check icon" ng-show="field.value"></i>
               </span>
 
-              <span ng-if="field.type == null">
+              <span ng-if="field.type == null && field.name != 'Resume'">
                 {{field.value}}
+              </span>
+
+              <span ng-if="field.type == null && field.name == 'Resume'">
+                <a href="{{field.value}}" target="_blank"> {{field.value}}</a>
               </span>
             </p>
 
