--- a/app/client/views/application/application.html
+++ b/app/client/views/application/application.html
@@ -129,15 +129,15 @@
 
         <br>
 
-        <div class="field">
-          <label>What is your experience with Hackathons? </label>
-          <select
-            name="hackerExperience"
-            ng-model="user.profile.hackerExperience">
-            <option value="First time at a hackathon?">First time at a hackathon?</option>
-            <option value="First time at HackBeanpot?">First time at HackBeanpot?</option>
-            <option value="I would be interested in a first time hacker orientation">I would be interested in a first time hacker orientation</option>
-          </select>
+        <div class="checkbox-label"> What is your experience with Hackathons? </div>
+        <div class="field"
+          ng-repeat="(key, value) in hackerExperience">
+
+          <div class="ui checkbox">
+            <input type="checkbox" ng-model="hackerExperience[key]" />
+            <label>{{key}}</label>
+          </div>
+
         </div>
         
         <br>
@@ -187,7 +187,7 @@
 
         <br>
 
-        <div class="checkbox-label"> Did you attend any events hosted by HackBeanpot in Fall 2019? </div>
+        <div class="checkbox-label"> Did you attend any events hosted by HackBeanpot in Fall 2019? Check all that apply. </div>
         <div class="field"
           ng-repeat="(key, value) in hbpOutreachEvents">
 
@@ -237,6 +237,24 @@
             <option value="I have a team in mind but would be open to finding a new team at the event">I have a team in mind but would be open to finding a new team at the event.</option>
             <option value="I want to join a new team at the event">I want to join a new team at the event</option>
             <option value="I want to work solo">I want to work solo.</option>
+          </select>
+        </div>
+
+        <br>
+
+        <div class="field">
+          <label> S.W.A.G. - Shirts We All Got. Shirt size? </label>
+          <select
+            name="shirt"
+            ng-model="user.profile.shirtSize"
+            required>
+            <option value=""></option>
+            <option value="XS">Unisex X-Small</option>
+            <option value="S">Unisex Small</option>
+            <option value="M">Unisex Medium</option>
+            <option value="L">Unisex Large</option>
+            <option value="XL">Unisex X-Large</option>
+            <option value="XXL">Unisex XX-Large</option>
           </select>
         </div>
         
