--- a/app/client/views/admin/user/user.html
+++ b/app/client/views/admin/user/user.html
@@ -161,15 +161,10 @@
                 ng-model="selectedUser.profile.jellybean">
       </div>
 
-      <div class="checkbox-label"> What is your experience with Hackathons? </div>
-      <div class="field"
-        ng-repeat="(key, value) in hackerExperience">
-
-        <div class="ui checkbox">
-          <input type="checkbox" ng-model="hackerExperience[key]" />
-          <label>{{key}}</label>
-        </div>
-
+      <div class="field">
+        <label> What is your experience with Hackathons? </label>
+        <input
+          type="text" ng-model="selectedUser.profile.hackerExperience" />
       </div>
 
       <div class="field">
@@ -181,13 +176,13 @@
       <div class="field">
         <label> Tech Interests </label>
         <input
-          type="text" ng-model="selectedUser.confirmation.techInterests" />
+          type="text" ng-model="selectedUser.profile.techInterests" />
       </div>
 
       <div class="field">
         <label> Did you attend any events hosted by HackBeanpot in Fall 2019? </label>
         <input
-          type="text" ng-model="selectedUser.confirmation.hbpOutreachEvents" />
+          type="text" ng-model="selectedUser.profile.hbpOutreachEvents" />
       </div>
 
       <div class="field">
