removed background color

--- a/app/client/stylesheets/_branding.scss
+++ b/app/client/stylesheets/_branding.scss
@@ -8,3 +8,8 @@ $primary: #bdf1a3;
 $secondary: #1b365d;
 $tertiary: #4c82cc;
 
+/** ASSET URLS
+ * login-bg: image for login splash page 
+ */
+
+$login-bg: url('https://s3.amazonaws.com/hackmit-assets/tintedphoto_1920_1080_low.jpg');
