--- a/app/client/stylesheets/_login.scss
+++ b/app/client/stylesheets/_login.scss
@@ -1,8 +1,8 @@
 #login {
   height: 100%;
   width: 100%;
-  background-color: $login-bg-color;
-  background: $login-bg; 
+  background-color: $white;
+  background: $white; 
   background-size: cover;
 
   > .container {
