--- a/app/client/views/confirmation/confirmation.html
+++ b/app/client/views/confirmation/confirmation.html
@@ -30,14 +30,6 @@
           <div class="divided title"> Skills & Accomplishments </div>
 
           <div class="field">
-            <label> What are you studying? </label>
-            <input type="text"
-                   name="study"
-                   placeholder="Computer Science, Product Design, Basket Weaving, etc."
-                   ng-model="user.confirmation.major">
-          </div>
-
-          <div class="field">
             <label> Github </label>
             <input type="text"
                    name="github"
@@ -132,7 +124,7 @@
           <br>
           <br>
 
-          <div class="divided title">everything else</div>
+          <div class="divided title">Everything Else</div>
 
           <div class="field">
             <label>
