--- a/app/client/views/confirmation/confirmation.html
+++ b/app/client/views/confirmation/confirmation.html
@@ -68,10 +68,14 @@
               </a>
             </p>
             <p>
-              For legal reasons, our university asks that you read and accept the terms of our liability waiver. Again, as we mentioned in the original lottery application - you <strong> must </strong> be 18 years or older or an MIT undergraduate by the day of the event, or <strong> we will refuse you admission at the door. We will be checking ID. </strong>
+              For legal reasons, we ask that you read and accept the terms of our liability waiver. You 
+              <strong> must </strong> be 18 years or older by the day of the event, or have emailed us at 
+              <a href="mailto:team@hackbeanpot.com" target="_blank" class="inline-link" title="Email us!"> team@hackbeanpot.com</a> 
+              in order to get paperwork that you bring to the event.
             </p>
             <p>
-              By writing my name below, I affirm that I have read and accepted the terms of the liability waiver above, and will be either an MIT undergraduate or 18 years or older at the time of the event.
+              By writing my name below, I affirm that I have read and accepted the terms of the liability waiver above, and will either be
+              18 years or older at the time of the event or will have emailed us beforehand to bring the aforementioned paperwork.
             </p>
             <input type="text"
                    name="signatureLiabilityWaiver"
