Removed branding + added other

--- a/app/client/views/admin/user/user.html
+++ b/app/client/views/admin/user/user.html
@@ -180,6 +180,24 @@
       </div>
 
       <div class="field">
+        <label> Other Tech Interests </label>
+        <input
+          type="text" ng-model="selectedUser.profile.otherTechInterests" />
+      </div>
+
+      <div class="field">
+        <label> Heard About Us </label>
+        <input
+          type="text" ng-model="selectedUser.profile.heardAboutUs" />
+      </div>
+
+      <div class="field">
+        <label> Other Heard About us </label>
+        <input
+          type="text" ng-model="selectedUser.profile.otherHeardAboutUs" />
+      </div>
+
+      <div class="field">
         <label> Did you attend any events hosted by HackBeanpot in Fall 2019? </label>
         <input
           type="text" ng-model="selectedUser.profile.hbpOutreachEvents" />
