legal + notes + email

--- a/app/client/views/confirmation/confirmation.html
+++ b/app/client/views/confirmation/confirmation.html
@@ -156,7 +156,7 @@
           <br>
           <br>
 
-          <div class="divided title">everything else</div>
+          <div class="divided title">Everything Else</div>
 
           <div class="field">
             <label>
