--- a/app/client/views/admin/stats/stats.html
+++ b/app/client/views/admin/stats/stats.html
@@ -107,21 +107,6 @@
           </div>
         </div>
 
-        <div class="item">
-          <i class="child icon"></i>
-          <div class="content">
-            <strong>
-              Women's shirt sizes:
-            </strong> :
-              XS ({{stats.shirtSizes['WXS']}})
-              S ({{stats.shirtSizes['WS']}})
-              M ({{stats.shirtSizes['WM']}})
-              L ({{stats.shirtSizes['WL']}})
-              XL ({{stats.shirtSizes['WXL']}})
-              XXL ({{stats.shirtSizes['WXXL']}})
-          </div>
-        </div>
-
         <div class="ui divider"></div>
 
         <div class="item">
@@ -182,16 +167,25 @@
     <div class="ui divider"></div>
       <div class="ui list">
         <div class="item">
-          <strong>Fresh:</strong> {{stats.demo.year['2019']}} ({{stats.demo.year['2019'] / stats.total * 100 | number: 1}}%)
+          <strong>Highschool:</strong> {{stats.demo.year['H']}} ({{stats.demo.year['H'] / stats.total * 100 | number: 1}}%)
         </div>
         <div class="item">
-          <strong>Soph:</strong> {{stats.demo.year['2018']}} ({{stats.demo.year['2018'] / stats.total * 100 | number: 1}}%)
+          <strong>First Year:</strong> {{stats.demo.year['1']}} ({{stats.demo.year['1'] / stats.total * 100 | number: 1}}%)
         </div>
         <div class="item">
-         <strong>Junior:</strong> {{stats.demo.year['2017']}} ({{stats.demo.year['2017'] / stats.total * 100 | number: 1}}%)
+          <strong>Second Year:</strong> {{stats.demo.year['2']}} ({{stats.demo.year['2'] / stats.total * 100 | number: 1}}%)
         </div>
         <div class="item">
-          <strong>Senior:</strong> {{stats.demo.year['2016']}} ({{stats.demo.year['2016'] / stats.total * 100 | number: 1}}%)
+          <strong>Third Year:</strong> {{stats.demo.year['3']}} ({{stats.demo.year['3'] / stats.total * 100 | number: 1}}%)
+        </div>
+        <div class="item">
+          <strong>Fourth Year:</strong> {{stats.demo.year['4']}} ({{stats.demo.year['4'] / stats.total * 100 | number: 1}}%)
+        </div>
+        <div class="item">
+          <strong>Fifth Year:</strong> {{stats.demo.year['5']}} ({{stats.demo.year['5'] / stats.total * 100 | number: 1}}%)
+        </div>
+        <div class="item">
+          <strong>Graduate Student:</strong> {{stats.demo.year['G']}} ({{stats.demo.year['G'] / stats.total * 100 | number: 1}}%)
         </div>
       </div>
     <div class="ui divider"></div>
