made all required questions required not multi select

--- a/app/client/stylesheets/site.scss
+++ b/app/client/stylesheets/site.scss
@@ -155,4 +155,13 @@ fieldset {
   text-transform: none;
 }
 
+.required {
+  color: #FF6D6A;
+}
+
+.application-description {
+  
+  text-align: center;
+}
+
 // @import 'animation';
