--- a/app/client/views/admin/user/user.html
+++ b/app/client/views/admin/user/user.html
@@ -248,7 +248,7 @@
           ng-model="selectedUser.profile.teamPlan">
           <option value="I have a team that I plan to come and work with">I have a team that I plan to come and work with.</option>
           <option value="I have a team in mind but would be open to finding a new team at the event">I have a team in mind but would be open to finding a new team at the event.</option>
-          <option value="I want to join a new team at the event">I want to join a new team at the event</option>
+          <option value="I want to join a new team at the event">I want to join a new team at the event.</option>
           <option value="I want to work solo">I want to work solo.</option>
         </select>
       </div> 
