multiselect required questions

--- a/app/client/views/application/application.html
+++ b/app/client/views/application/application.html
@@ -132,7 +132,7 @@
 
         <br>
 
-        <div class="checkbox-label"> What is your experience with Hackathons? </div>
+        <div class="checkbox-label"> What is your experience with Hackathons?  <span class="required">*</span> </div>
         <div class="field"
           ng-repeat="(key, value) in hackerExperience">
 
@@ -153,7 +153,7 @@
 
         <br>
 
-        <div class="checkbox-label"> Tech Interests </div>
+        <div class="checkbox-label"> Tech Interests  <span class="required">*</span> </div>
         <div class="field"
           ng-repeat="(key, value) in techInterests">
 
@@ -184,7 +184,7 @@
 
         <div class="divided title">HackBeanpot-Related Things</div>
 
-        <div class="checkbox-label"> How did you hear about us? </div>
+        <div class="checkbox-label"> How did you hear about us?  <span class="required">*</span> </div>
         <div class="field"
           ng-repeat="(key, value) in heardAboutUs">
 
