--- a/app/client/views/admin/user/user.html
+++ b/app/client/views/admin/user/user.html
@@ -287,6 +287,12 @@
       </div>
 
       <div class="field">
+          <label> Other Dietary Restrictions </label>
+          <input
+            type="text" ng-model="selectedUser.confirmation.otherDietaryRestrictions" />
+        </div>
+
+      <div class="field">
         <label> Shirt Size </label>
         <input type="text" ng-model="selectedUser.profile.shirtSize" />
       </div>
