--- a/app/client/views/confirmation/confirmation.html
+++ b/app/client/views/confirmation/confirmation.html
@@ -46,7 +46,14 @@
               </div>
 
             </div>
+            
           </div>
+
+          <div class="field" ng-show="dietaryRestrictions['Other']">
+            <label> Other Dietary Restrictions (please specify) </label>
+            <input type="text" ng-model="user.confirmation.otherDietaryRestrictions">
+          </div>
+
 
           <br>
           <br>
