confirmation page updates

--- a/app/client/views/confirmation/confirmation.html
+++ b/app/client/views/confirmation/confirmation.html
@@ -58,7 +58,7 @@
           <br>
           <br>
 
-          <div class="divided title"> Skills & Accomplishments </div>
+          <div class="divided title"> Links </div>
 
           <div class="field">
             <label> Github </label>
@@ -69,18 +69,18 @@
           </div>
 
           <div class="field">
-            <label> Twitter </label>
+            <label> LinkedIn </label>
             <input type="text"
-                   name="twitter"
-                   placeholder="https://twitter.com/foobar"
-                   ng-model="user.confirmation.twitter">
+                   name="linkedin"
+                   placeholder="https://linkedin.com/foobar"
+                   ng-model="user.confirmation.linkedin">
           </div>
 
           <div class="field">
               <label> Website </label>
               <input type="text"
                      name="website"
-                     placeholder="hackername.come"
+                     placeholder="hackername.com"
                      ng-model="user.confirmation.website">
             </div>
 
@@ -94,15 +94,15 @@
             <p>
               <a
                 target="_blank"
-                href="https://go.hackmit.org/liability-waiver">
+                href="https://drive.google.com/file/d/1RqsMmjFzvY8fzRWMxApKNpVV5LzGazK2/view?usp=sharing">
                 Liability Waiver
               </a>
             </p>
             <p>
-              For legal reasons, our university asks that you read and accept the terms of our liability waiver. Again, as we mentioned in the original lottery application - you <strong> must </strong> be 18 years or older or an MIT undergraduate by the day of the event, or <strong> we will refuse you admission at the door. We will be checking ID. </strong>
+              Please read and accept the terms of our liability waiver. <strong>You must be 18 years or older and a student. We will be checking ID. </strong> If you are a high school student, we will email you a different liability waiver to sign.
             </p>
             <p>
-              By writing my name below, I affirm that I have read and accepted the terms of the liability waiver above, and will be either an MIT undergraduate or 18 years or older at the time of the event.
+              By writing my name below, I affirm that I have read and accepted the terms of the liability waiver above, and will be 18 years or older at the time of the event (leave blank if you are a high school student).
             </p>
             <input type="text"
                    name="signatureLiabilityWaiver"
@@ -115,7 +115,7 @@
             <p>
               <a
                 target="_blank"
-                href="https://go.hackmit.org/photo-release">
+                href="https://drive.google.com/file/d/1qNM92keEjzCOSudrwWJAgL04bloR9AHT/view?usp=sharing">
                 Photo Release
               </a>
             </p>
@@ -136,7 +136,7 @@
             <p>
               <a
                 target="_blank"
-                href="https://go.hackmit.org/code-of-conduct">
+                href="https://drive.google.com/file/d/1mJR8AhUwavsFnuPDS8wjHcSoBBCOwkPS/view?usp=sharing">
                 Hacker Code of Conduct
               </a>
             </p>
