changing waitlist text

--- a/app/client/views/dashboard/dashboard.html
+++ b/app/client/views/dashboard/dashboard.html
@@ -40,7 +40,7 @@
         <div
           ng-if="showWaitlist"
           class="waitlist state">
-          Pending Review
+          On Waitlist
         </div>
 
         <div class="ui divider"></div>
