Update to 2021 colors

--- a/app/client/stylesheets/_custom.scss
+++ b/app/client/stylesheets/_custom.scss
@@ -10,14 +10,14 @@ $hbp-red: #ff6d6a;
 $hbp-purple: #5461c8;
 $hbp-green: #70e0a3;
 
-// 2020 COLORS
+// 2021 COLORS
 
-$yellow-green: #E0F36D;
-$yellow-green-disabled: #F0FDA3;
-$yellow-green-hover: #CAE339;
+$light-blue: #B4EBEB;
+$light-blue-disabled: #CFE8E8;
+$light-blue-hover: #52C2C2;
 
-$dark-green: #439A6B;
-$not-so-dark-green: #7AC09A;
+$dark-green: #1D8A4F;
+$not-so-dark-green: #AAEAC8;
 
 $white: #fff;
 $darker-hbp-navy: #102037;
